--- a/src/styles/partials/_fonts.css
+++ b/src/styles/partials/_fonts.css
@@ -16,3 +16,15 @@
   font-weight: 700;
   font-style: bold;
 }
+
+/* Basier Square Mono */
+@font-face {
+  font-family: 'Basier Square Mono';
+  src: url('../fonts/basiersquaremono-regular-webfont.eot');
+  src: url('../fonts/basiersquaremono-regular-webfont.woff') format('woff'),
+       url('../fonts/basiersquaremono-regular-webfont.woff2') format('woff2'),
+       url('../fonts/basiersquaremono-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+
+}
